relevance的inner-converter